Mostly completed profilie

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <nav class="bg-dark">
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <div class="nav-link active">li</div>
+                <a class="nav-link active" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-                <div class="nav-link">li</div>
+                <a class="nav-link" href="resume.html">Resume</a>
             </li>
         </ul>
     </nav>
@@ -62,7 +62,7 @@
         <hr />
 
         <footer>
-            <p>&copy;</p>
+            <p>&copy;John Coburn</p>
         </footer>
     </div>
 
