--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 -DOM manipulation<br />
                 -O-O JavaScript
                 </p>
-                <a href="http://goliveonafarm-001-site1.itempurl.com/Game/TunnelGame" class="btn btn-primary">Visit</a>
+                <a href="https://goliveonafarm.github.io/TunnelGame/" class="btn btn-primary">Visit</a>
             </div>
             <img class="card-img-bottom" src="gamePage.png" alt="Card image" style="width:200px;height:200px">
         </div></td>
