made some small changes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="myStyles.css">
 </head>
 <body>
+    <div class="myLayer"></div>
     <nav class="bg-dark">
         <ul class="nav nav-tabs">
             <li class="nav-item">
