--- a/index.html
+++ b/index.html
@@ -1,75 +1,158 @@
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>John Coburn Portfolio</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- Add icon library -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="myStyles.css">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://bootswatch.com/4/darkly/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <!-- End Bootstrap CSS -->
+  <!-- FontAwesome CSS -->
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <!-- End Bootstrap CSS -->
+
+  <!-- My CSS-->
+  <link rel="stylesheet" href="myStyles.css">
+  <!-- End CSS-->
+
+  <title>Hello, world!</title>
 </head>
+
 <body>
-    <div class="myLayer"></div>
-    <nav class="bg-dark">
-        <ul class="nav nav-tabs">
-            <li class="nav-item">
-                <a class="nav-link active" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="resume.html">Resume</a>
-            </li>
-            <li class="nav-item">
-                <a class="fa fa-linkedin" href="https://www.linkedin.com/in/john-coburn-895395177/" target="_blank"></a>
-            </li>
-            <li class="nav-item">
-                <a class="fa fa-github" href="https://github.com/goliveonafarm" target="_blank"></a>
-            </li>
+
+  <!-- This is the old nav -->
+  <!-- <div class="container">
+    <nav class="nav ">
+
+      <div class="justify-content-start">
+        <ul class="nav nav-pills">
+          <li class="nav-item">
+            <a class="nav-link active" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="aboutMe.html">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="resume.html">Resume</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/goliveonafarm" target="_blank"><i
+                class="fa fa-github-square"></i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.linkedin.com/in/john-coburn-895395177/" target="_blank"><i
+                class="fa fa-linkedin-square"></i></a>
+          </li>
         </ul>
     </nav>
+  </div> -->
 
-    <div class="container body-content">
+  <div class="container">
+    <!--Start Container-->
 
-        <table cellpadding="10">
-            <tr>
-                <td><div class="card" style="width:400px;height:500px;">
-            <div class="card-body">
-                <h4 class="card-title">UFO Sightings</h4>
-                <p class="card-text">Lets users submit sightings and display in google maps<br />
-                -ASP.Net C# MVC<br />
-                -Google Maps API<br />
-                -MS SQL<br />
-                -CRUD functionality</p>
-                <a href="http://goliveonafarm-001-site1.itempurl.com/Home/UFOIndex" target="_blank" class="btn btn-primary">Visit</a>
-            </div>
-            <img class="card-img-bottom" src="mapPage.png" alt="Card image" style="width:300px;height:200px">
-        
-        </div></td>
-                <td><div class="card" style="width:400px;height:500px;">
-            <div class="card-body">
-                <h4 class="card-title">Dungeon Crawler</h4>
-                <p class="card-text">Current Project-<br />
-                Old school dungeon crawler game<br />
-                -Vanilla JavaScript (no framework including .net)<br />
-                -CSS grid<br />
-                -DOM manipulation<br />
-                -O-O JavaScript
-                </p>
-                <a href="https://goliveonafarm.github.io/TunnelGame/" target="_blank" class="btn btn-primary">Visit</a>
-            </div>
-            <img class="card-img-bottom" src="gamePage.png" alt="Card image" style="width:200px;height:200px">
-        </div></td>
-            </tr>
-        </table>
-        <hr />
-        <footer>
-            <p>&copy;John Coburn</p>
-        </footer>
+    <nav class="navbar navbar-expand-md navbar-light ">
+
+      <a class="navbar-brand nav-link" href="index.html">Home</a>
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="aboutMe.html">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="resume.html">Resume</a>
+          </li>
+
+          <li class="nav-item active">
+            <a class="nav-link" href="https://github.com/goliveonafarm">
+              <i class="fa fa-github-square"></i>
+            </a>
+          </li>
+
+          <li class="nav-item active">
+            <a class="nav-link" href="https://www.linkedin.com/in/john-coburn-895395177/">
+              <i class="fa fa-linkedin-square"></i>
+            </a>
+          </li>
+
+        </ul>
+      </div>
+    </nav>
+
+  </div><!-- End Container-->
+
+  <div class="jumbotron">
+    <div class="container">
+      <h1>Welcome to my portfolio!</h1>
+      <p>This page was designed using bootstrap mobile first approach</p>
     </div>
+  </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <div class="container">
 
+    <div class="row">
+      <!-- New Row -->
+      <div class="col-xs-12 col-md-6">
+        <!-- New Column1 -->
+        <div class="card">
+          <img src="mapPage.png" class="card-img-top" />
+          <div class="card-block">
+            <h3 class="card-title">UFO Sighting Map</h3>
+            <p>Allows users to submit UFO sightings and displays submissions in google maps.</p>
+          </div>
+          <div class="card-body">
+            <a href="http://goliveonafarm-001-site1.itempurl.com/Home/UFOIndex" class="card-link">
+              <button type="button" class="btn btn-info">Hosted</button>
+            </a>
+          </div>
+        </div>
+      </div><!-- End Column1 -->
+      <!-- New Column2 -->
+      <div class="col-xs-12 col-md-6">
+        <div class="card">
+          <img src="gamePage.png" class="card-img-top" />
+          <div class="card-block">
+
+            <h3 class="card-title">JavaScript Game</h3>
+            <p>Vanilla JavaScript dungeon crawler. Uses DOM manipulation and CSS.</p>
+          </div>
+          <div class="card-body">
+            <a href="https://goliveonafarm.github.io/TunnelGame/" class="card-link">
+              <button type="button" class="btn btn-info">Hosted</button>
+            </a>
+            <a href="https://github.com/goliveonafarm/TunnelGame" class="card-link">
+              <button type="button" class="btn btn-success">Code</button>
+            </a>
+          </div>
+        </div>
+      </div><!-- End Column2 -->
+    </div><!-- End Row -->
+
+  </div>
+  <div class="container">
+    <hr>
+    <p>John Coburn</p>
+  </div>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script><!-- End Optional JavaScript -->
 </body>
+
 </html>
