Had issues with branch.

--- a/resume.html
+++ b/resume.html
@@ -73,13 +73,13 @@
               </li>
     
               <li class="nav-item active">
-                <a class="nav-link" href="https://github.com/goliveonafarm">
+                <a class="nav-link" href="https://github.com/goliveonafarm " target="_blank">
                   <i class="fa fa-github-square"></i>
                 </a>
               </li>
     
               <li class="nav-item active">
-                <a class="nav-link" href="https://www.linkedin.com/in/john-coburn-895395177/">
+                <a class="nav-link" href="https://www.linkedin.com/in/john-coburn-895395177/" target="_blank">
                   <i class="fa fa-linkedin-square"></i>
                 </a>
               </li>
