--- a/aboutMe.html
+++ b/aboutMe.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="myStyles.css">
     <!-- End CSS-->
 
-    <title>Hello, world!</title>
+    <title>About Me</title>
 </head>
 
 <body>
