--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="myStyles.css">
   <!-- End CSS-->
 
-  <title>Hello, world!</title>
+  <title>JC Portfolio Home</title>
 </head>
 
 <body>
@@ -54,7 +54,7 @@
   <div class="container">
     <!--Start Container-->
 
-    <nav class="navbar navbar-expand-md navbar-light ">
+    <nav class="navbar navbar-expand-md navbar-dark">
 
       <a class="navbar-brand nav-link" href="index.html">Home</a>
 
@@ -88,7 +88,8 @@
       </div>
     </nav>
 
-  </div><!-- End Container-->
+  </div>
+  <!-- End Container-->
 
   <div class="jumbotron">
     <div class="container">
