--- a/aboutMe.html
+++ b/aboutMe.html
@@ -9,128 +9,112 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="https://bootswatch.com/4/darkly/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="https://bootswatch.com/4/cosmo/bootstrap.css" rel="stylesheet" type="text/css">
     <!-- End Bootstrap CSS -->
     <!-- FontAwesome CSS -->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- End Bootstrap CSS -->
 
+    <!-- Google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet">
+    <!-- End Google fonts -->
+
     <!-- My CSS-->
     <link rel="stylesheet" href="myStyles.css">
     <!-- End CSS-->
 
-    <title>Hello, world!</title>
+
+    <title>John Coburn Dev Portfolio - About Me</title>
 </head>
 
 <body>
-
-    <!-- This is the old nav -->
-    <!-- <div class="container">
-    <nav class="nav ">
-
-      <div class="justify-content-start">
-        <ul class="nav nav-pills">
-          <li class="nav-item">
-            <a class="nav-link active" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="aboutMe.html">About Me</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="resume.html">Resume</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://github.com/goliveonafarm" target="_blank"><i
-                class="fa fa-github-square"></i></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://www.linkedin.com/in/john-coburn-895395177/" target="_blank"><i
-                class="fa fa-linkedin-square"></i></a>
-          </li>
-        </ul>
-    </nav>
-  </div> -->
-
-    <div class="container">
-        <!--Start Container-->
-
-        <nav class="navbar navbar-expand-md navbar-light ">
-
-            <a class="navbar-brand nav-link" href="index.html">Home</a>
-
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="aboutMe.html">About Me</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="resume.html">Resume</a>
-                    </li>
-
-                    <li class="nav-item active">
-                        <a class="nav-link" href="https://github.com/goliveonafarm">
-                            <i class="fa fa-github-square"></i>
-                        </a>
-                    </li>
-
-                    <li class="nav-item active">
-                        <a class="nav-link" href="https://www.linkedin.com/in/john-coburn-895395177/">
-                            <i class="fa fa-linkedin-square"></i>
-                        </a>
-                    </li>
-
-                </ul>
+    <!-- Top Banner md - Jumbotron - Display only when screen is >= md -->
+    <div class="jumbotron-fluid myImgJumbo2 d-none d-md-block">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-4 offset-md-4">
+                    <h1 class="display-1 jumbotronFont fontAmatic">About Me</h1>
+                </div>
             </div>
-        </nav>
+        </div>
+    </div><!-- End Top Banner md -->
 
-    </div><!-- End Container-->
+    <!-- Navbar -->
+    <div class="container-fluid bg-dark marginBottom" data-spy="affix" data-offset-top="30">
+        <div class="container">
+            <nav class="navbar navbar-expand-md navbar-dark bg-dark text-center">
 
+                <a class="navbar-brand" href="index.html">Home</a>
 
-    <div class="jumbotron">
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="aboutMe.html">About Me</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="resume.html">Resume</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://github.com/goliveonafarm" target="_blank">
+                                <i class="fa fa-github-square"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://www.linkedin.com/in/john-coburn-895395177/"
+                                target="_blank">
+                                <i class="fa fa-linkedin-square"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </div>
+    <!-- End Navbar-->
+
+    <!-- Top Banner sm - Jumbotron - display only when screen is < md -->
+    <div class="jumbotron d-md-none">
         <div class="container">
             <h1>About Me</h1>
-            <p>Under Construction</p>
+        </div>
+    </div><!-- End Top Banner sm -->
+
+    <!-- Jumbotron - initial about me section -->
+    <div class="jumbotron topMargin">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-xs-12 col-md-9 col-lg-9 ">
+                    <h4>After having worked in the service industry for several years, I decided to further my
+                        education. I graduated from Stark State College with an associate degree in computer science and
+                        engineering. My class work focused on SQL Server, ASP.NET C#, Java, C++, WinForms, and HTML.
+                        Since after graduating I have also learned JavaScript and bootstrap.
+                    </h4>
+                    <h4> I am currently learning
+                            node.js and working on a website where users can sign up and schedule live, online music lessons.</h4>
+                </div>
+                <div class="col-xs-12 col-md-3 col-lg-3 ">
+                    <img src="#" class="rounded-circle grayScale" width="200px" height="200px" alt="Me">
+                </div>
+            </div>
         </div>
     </div>
 
-    <div class="container">
-        <div class="row justify-content-start">
-            <div class="col-6">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and
-                    scrambled it to make a type specimen book. It has survived not only five centuries, but also the
-                    leap into
-                    electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
-                    release of
-                    Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software
-                    like Aldus
-                    PageMaker including versions of Lorem Ipsum.</p>
+    <footer class="py-1 fixed-bottom bg-dark text-white-50">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-right">
+                    <small>&copy; John Coburn</small>
+                </div>
             </div>
-            <div class="col-6">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and
-                    scrambled it to make a type specimen book. It has survived not only five centuries, but also the
-                    leap into
-                    electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
-                    release of
-                    Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software
-                    like Aldus
-                    PageMaker including versions of Lorem Ipsum.</p>
-            </div>
-        </div><!-- End row -->
-    </div><!-- End container -->
+        </div>
+    </footer>
 
-    <div class="container">
-        <hr>
-        <p>John Coburn</p>
-    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
