--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
           <h3>Current project-</h1>
             <h5 class="card-title">eLearnMusic</h5>
             <p class="card-text">This site will allow users to schedule a live music lesson through the website</p>
-            <p class="card-text"><small>No features have been implemented yet but I am learning webRTC and
-                node.js</small></p>
+            <p class="card-text"><small></small></p>
             <a href="https://goliveonafarm.github.io/MusicWebsite/about.html" class="card-link" target="_blank">
               <button type="button" class="btn btn-info">Hosted</button>
             </a>
