Removed image placeholder

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -98,9 +98,9 @@
                     <h4> I am currently learning
                             node.js and working on a website where users can sign up and schedule live, online music lessons.</h4>
                 </div>
-                <div class="col-xs-12 col-md-3 col-lg-3 ">
+                <!-- <div class="col-xs-12 col-md-3 col-lg-3 ">
                     <img src="#" class="rounded-circle grayScale" width="200px" height="200px" alt="Me">
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
