Quick fix URL index

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <h5 class="card-title">eLearnMusic</h5>
             <p class="card-text">This site will allow users to schedule a live music lesson through the website</p>
             <p class="card-text"><small></small></p>
-            <a href="https://goliveonafarm.github.io/MusicWebsite/about.html" class="card-link" target="_blank">
+            <a href="https://goliveonafarm.github.io/MusicWebsite/index.html" class="card-link" target="_blank">
               <button type="button" class="btn btn-info">Hosted</button>
             </a>
             <a href="https://github.com/goliveonafarm/MusicWebsite" class="card-link" target="_blank">
